--- a/templates/login.html
+++ b/templates/login.html
@@ -95,7 +95,7 @@
 <body>
   <div class="container">
     <div class="left">
-      <img class="mobile-logo" src="https://cdn.jsdelivr.net/gh/rajatkulkarni95/CDN/discord-white-logo-text.png" alt="Discord Logo" />
+      <img class="mobile-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Discord_white_textlogo_%282021%29.svg/2560px-Discord_white_textlogo_%282021%29.svg.png" alt="Discord Logo" />
       <h2>Welcome back!</h2>
       <p class="subtext">We're so excited to see you again!</p>
       <form method="POST" action="/login">
